RichwoodNew/src/objects/Ticket__c.object
<CustomObject>
    <description>Internal Richwood Helpdesk and Maintenance support cases.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_By_Time__c</fullName>
        <label>Due By Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Helpdesk</fullName>
                </value>
                <value>
                    <fullName>IT Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Application Support</fullName>
                </value>
                <value>
                    <fullName>Maintenance and Facilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Response_Time__c</fullName>
        <label>Initial Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Personnel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolved_Time__c</fullName>
        <label>Resolved Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Waiting on User</fullName>
                </value>
                <value>
                    <fullName>Waiting on 3rd Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>---</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Hardware Request</fullName>
                </value>
                <value>
                    <fullName>Software Request</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Maint - Repair</fullName>
                </value>
                <value>
                    <fullName>Maint - Install</fullName>
                </value>
                <value>
                    <fullName>Maint - Project</fullName>
                </value>
                <value>
                    <fullName>Employee Status Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Personnel__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>